# esp32-opcua-gateway-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  aws-env.sh.example  build.rs  cfg.toml.example  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.githooks/: pre-commit
.github/: CODEOWNERS  WORKFLOWS.md  dependabot.yml  pull_request_template.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  esp32-build.yml  release.yml  security-audit.yml  stale.yml  zizmor.yml
certs/: README.md
docs/: AWS_ACCESS_SETUP.md  FIRMWARE_INTEGRATION.md  PROVISIONING.md  ota_flow.md
hardware/: README.md
scripts/: seed_device.py
src/: config.rs  device_id.rs  eth.rs  main.rs  mqtt_util.rs  ota.rs  provisioning.rs  telemetry.rs  wifi.rs
terraform/: data.tf  dynamodb.tf  iam.tf  iam_github_oidc.tf  iot.tf  lambda.tf  lambda_ota.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/lambda/ota_trigger/: index.py
terraform/lambda/pre_provisioning_hook/: index.py
