[package]
name = "esp32-opcua-gateway"
version = "0.0.1"
edition = "2021"
resolver = "2"
publish = false

[[bin]]
name = "esp32-opcua-gateway"
harness = false

[dependencies]
log = "0.4"
esp-idf-svc = "0.52.1"
embedded-hal = "1"
w5500-ll = { version = "0.13", features = ["eh1"] }
anyhow = "1"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
