[package]
name = "esp32-opcua-gateway"
version = "0.0.1"
edition = "2021"
resolver = "2"
publish = false

[[bin]]
name = "esp32-opcua-gateway"
harness = false

[dependencies]
log = "0.4"
esp-idf-svc = "0.52.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml-cfg = "0.2"

# NOT: W5500 artik ESP-IDF'in dahili esp_eth SPI surucusuyle (lwIP netif olarak)
# suruluyor; boylece TCP/IP + mbedTLS + MQTT dogrudan calisiyor. Bu yuzden
# saf-Rust register surucusu (w5500-ll) ve embedded-hal kaldirildi.

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
